--- a/DD/Sections/2-Architectural_Design/Other_design_decisions.tex
+++ b/DD/Sections/2-Architectural_Design/Other_design_decisions.tex
@@ -1,5 +1,5 @@
 \subsection{Lightweight thin client}
-The client software is narrowly purposed and lightweight: only the host server or server farm needs to be secured,rather than securing software installed on every endpoint device (although thin clients may still require basic security and strong authentication to prevent unauthorized access). One of the combined benefits of using cloud architecture with thin client desktops is that critical IT assets are centralized for better utilization of resources. Unused memory, bussing lanes, and processor cores within an individual user session, for example, can be leveraged for other active user sessions.
+The client software is narrowly purposed and lightweight: only the host server or server farm needs to be secured, rather than securing software installed on every endpoint device (although thin clients may still require basic security and strong authentication to prevent unauthorized access). One of the combined benefits of using cloud architecture with thin client desktops is that critical IT assets are centralized for better utilization of resources. Unused memory, bussing lanes and processor cores within an individual user session, for example, can be leveraged for other active user sessions.
 \newline
 The simplicity of thin client hardware and software results in a very low total cost of ownership, but some of these initial savings can be offset by the need for a more robust cloud infrastructure required on the server side. Therefore, the SafeStreets mobile application can be run on any device (even cheap ones) as the computational power required is extremely low.
 \newline
@@ -10,7 +10,7 @@ Relational databases are the most used technique of data storaging. A relational
     \item Present the data to the user as relations (a presentation in tabular form, i.e. as a collection of tables with each table consisting of a set of rows and columns);
     \item Provide relational operators to manipulate the data in tabular form.
 \end{itemize}
-In order to build a formally correct relational database, it is necessary to create a \textbf{Relation model} of the data that the database is going to contain. The relational model organizes data into one or more tables (or "relations") of columns and rows, with a unique key identifying each row. Rows are also called records or tuples.Columns are also called attributes. Generally, each table/relation represents one "entity type" (such as user or violation). The rows represent instances of that type of entity  and the columns representing values attributed to that instance (such as username or date). 
+In order to build a formally correct relational database, it is necessary to create a \textbf{Relation model} of the data that the database is going to contain. The relational model organizes data into one or more tables (or "relations") of columns and rows, with a unique key identifying each row. Rows are also called records or tuples. Columns are also called attributes. Generally, each table/relation represents one "entity type" (such as user or violation). The rows represent instances of that type of entity  and the columns representing values attributed to that instance (such as username or date). 
 \newline Moreover, tables are connected through relations, which are a logical connection, established on the basis of interaction among these tables. 
 \newline In order to interact with a relational database, it is necessary to use a RDBMS, such as PostgreSQL or MySQL and so forth.
 \newline The main advantages of using a relational database are:
