--- a/DD/Sections/2-Architectural_Design/Selected_architectural_styles_and_patterns.tex
+++ b/DD/Sections/2-Architectural_Design/Selected_architectural_styles_and_patterns.tex
@@ -7,7 +7,7 @@ As far as the SafeStreets system is concerned, both the web and the mobile appli
     \item the web application retrieves data and performs operations that require the application backend system through API invokation through a \textbf{Promise-Deferred} asynchronous calling system.
 \end{itemize}
 Also, the mobile application make use of the Google Maps API for the mapping service.\newline
-At the same time, the application backend system make use of the RESTful APIs offered by the Municipality information system and the Image recognition service.
+At the same time, the application backend system make use of the RESTful APIs offered by the Municipality information system and the Plate recognition service.
 Therefore, a certain information system can be both offering and using RESTful APIs for its purposes.
 \subsection{MVC design pattern}
 As deeply explained in the overview paragraph of this section, the MVC design pattern is the core of the functioning of the SafeStreets system.
