--- a/DD/main.tex
+++ b/DD/main.tex
@@ -75,6 +75,10 @@
   
   \chapter{Implementation, integration and test plan}
   \input{Sections/5-Implementation_integration_and_test/Implementation_integration_and_test.tex}
+  \section{Verification and validation}
+  \input{Sections/5-Implementation_integration_and_test/Verification_and_validation.tex}
+  \section{Component integraton}
+  \input{Sections/5-Implementation_integration_and_test/Component_integration.tex}
   
   \chapter{Effort Spent}
   \input{Sections/6-Effort_spent/Luca_loria.tex}
