Finish requirements traceability

--- a/DD/Sections/5-Implementation_integration_and_test/Implementation_integration_and_test.tex
+++ b/DD/Sections/5-Implementation_integration_and_test/Implementation_integration_and_test.tex
@@ -38,13 +38,13 @@ In order to proceed with the implementation of the SafeStreets system functional
     \end{tabularx}
   \end{table}
 The levels of importance and difficulty have been determined in an arbitrary way, based on the experience.
-In order to explain more in detailes the order of implementation and which components have to be implemented, here it is a list of precedence that will have to be followed while implementing and testing:
+In order to explain more in details the order of implementation and which components have to be implemented, here it is a list of precedence that will have to be followed while implementing and testing:
 \begin{itemize}
     \item \textbf{Perform information mining}: firstly it is necessary to develop the QueryManager, which performs the interactions with the ViolationDB and the AggregationManager as next. After this, it will be possible to proceed with the FilteringManager as it requires the interaction with the QueryManager. As soon as the previous components have been integrated, it will be possible to develop and test the
      SendNotificationWebManager and the SendNotificationMobileManager. The implementation of the latters can be performed asynchronously as they do not create any dependencies one another; 
     \item \textbf{Create a new report}: the first component to be developed is the NewReportHandler: it depends on the QueryManager which will need to be integrated with the functionalities required and the external service of image recognition for the license plates. As this latter component is external, it will be treated as well functioning and tested. The same process of integration of functions to actuate the "Create new Report" functionality will continue with the rest of the flow described at the previous point: QueryManager, AggregationManager,SendNotificationWebManager and (in parallel) SendNotificationMobileManager;
     \item \textbf{Change report status}: this functionality requires the development and testing of the ViolationStatusManager. All the (same) chain of dependencies will be updated and integrated with the functions needed for performing the "Change report status";
-    \item \textbf{Generate suggested intervention}: this functionality requires the development of the whole SuggestedIntervention Service subsystem: firstly, the development process should start from the MunicipalityDataHandler, which is in charge to interact with the Municipality information system (black box). Once this component has been developed, it will be time to proceed with the SuggetionGenerationManager that will interact with the MunicipalityDataHandler and the QueryManager to perform its computation. For this reason, the the QueryManager will be updated as necessary. At this moment, the SuggestionNotifier will be implemented and the SendNotificationMobileManager and SendNotificationWebManager will be updated aswell. The whole SuggestedIntervention Service subsystem should be fully implemented, tested and integrated at this point;
+    \item \textbf{Generate suggested intervention}: this functionality requires the development of the whole SuggestedIntervention Service subsystem: firstly, the development process should start from the MunicipalityDataHandler, which is in charge to interact with the Municipality information system (black box). Once this component has been developed, it will be time to proceed with the SuggestionGenerationManager that will interact with the MunicipalityDataHandler and the QueryManager to perform its computation. For this reason, the the QueryManager will be updated as necessary. At this moment, the SuggestionNotifier will be implemented and the SendNotificationMobileManager and SendNotificationWebManager will be updated as well. The whole SuggestedIntervention Service subsystem should be fully implemented, tested and integrated at this point;
     \item \textbf{Schedule police technicians}: in order to perform this functionality, the SchedulingManager component should be developed as first, together with the update of the whole flow from the QueryManager to the SendNotificationWebManager and SendNotificationMobileManager. Now the QueryManager should be able to interact with the PersonnelDB;
     \item \textbf{Register a new technician}: this operation requires the development of the TechnicianRegistrationManager and the update of the whole flow from the QueryManager to the SendNotificationMobileManager and SendNotificationWebManager. Now the QueryManager should be able to interact with the AuthenticationDB, in order to store credentials of new technicians;
     \item \textbf{View history of reports}: this functionality requires the update of the FilteringManager and the QueryManager.  At this moment of the development, the Violation Service subsystem should be completely implemented, tested and integrated;
