--- a/DD/main.tex
+++ b/DD/main.tex
@@ -77,7 +77,7 @@
   \input{Sections/5-Implementation_integration_and_test/Implementation_integration_and_test.tex}
   \section{Verification and validation}
   \input{Sections/5-Implementation_integration_and_test/Verification_and_validation.tex}
-  \section{Component integraton}
+  \section{Component integration}
   \input{Sections/5-Implementation_integration_and_test/Component_integration.tex}
   
   \chapter{Effort Spent}
