--- a/DD/Sections/4-Requirements_traceability/Requirements_traceability.tex
+++ b/DD/Sections/4-Requirements_traceability/Requirements_traceability.tex
@@ -1,4 +1,4 @@
-In this chapter we exhibit the mapping between the requirements stated in the RASD document and the design elements that have been chosen to introduce in order to address them. The stated components can sometimes address the requirements independently but some other times they rely on the actions of other components, such behaviour it is however illustrated in the description if needed. 
+In this chapter we exhibit the mapping between the requirements stated in the RASD document and the design elements that have been introduced in order to address them. The stated components can sometimes address the requirements independently but some other times they rely on the actions of other components, such behaviour it is however illustrated in the description if needed. 
 
 \begin{itemize} 
     \item {[R1]}: The mobile application must be able to gather all the required data such as: location, date and time from the user's device;
@@ -21,8 +21,10 @@ In this chapter we exhibit the mapping between the requirements stated in the RA
       \item \textbf{QueryManager}: under the request submitted by the NewReportHandler, the QueryManager will save the plate number, along with the other information, in the database. 
     \end{itemize} 
     \item {[R8]}: The backend system must retrieve the latest reports submitted by the user from the database. Once the data is gathered, the backend system must send it to the mobile application that will display them; 
-    \item {[R9]}: The user must be able to consult the status associated with each report;
-    % TODO: Check for this requirements
+    \item[] {[R9]}: The user must be able to consult the status associated with each report;
+    \begin{itemize}
+      \item \textbf{FilteringManager}: the FilteringManager manages also the requests regarding the history of reports of a specific user. This component will ask to the QueryManager to retrieve such data, after the data are obtained they are forwarded back to the mobile application through the SendMobileNotificationManager.
+    \end{itemize}
     \item {[R10]}: The application has to allow the user to insert an address near which to search the MDS. If no address is provided the application will instead search the MDS near the current position of the user (collected from the GPS);
     \begin{itemize}
       \item \textbf{UserMobileApp}: this behaviour is handled by the mobile application, if an address is provided it will be used, instead of the GPS coordinates, to formulate the MDS request.  
@@ -69,11 +71,23 @@ In this chapter we exhibit the mapping between the requirements stated in the RA
     \item[] {[R26]}: The system must offer some functionalities to calculate the most useful statistics/metrics related to the data;
     \begin{itemize}
       \item \textbf{AuthorityWebApp}: some sections of this web application are developed in order to create an interface that allows authority to mine data and get useful metrics;
-      \item \textbf{FilteringManager}:this component, based on the filters inserted by the user, gather a list of query parameters that will we passed over to QueryManager in order to retrieve the desired data. It also provides the functionalities needed to calculate the most useful metrics and statistics.
+      \item \textbf{FilteringManager}: this component, based on the filters inserted by the authority, gathers a list of query parameters that will we passed over to QueryManager in order to retrieve the desired data. It also provides the functionalities needed to calculate the most useful metrics and statistics.
     \end{itemize}    
     \item {[R27]}: The Web application provides a section from which the authorities can ask for suggestions;
+    \begin{itemize}
+      \item \textbf{AuthorityWebApp}: a dedicated section in the web application serves this purpose.
+    \end{itemize}     
     \item {[R28]}: The backend system must be able to communicate and retrieve data from the municipality service at any given time;
+    \begin{itemize}
+      \item \textbf{MunicipalityDataHandler}: this component performs the request to the MunicipalityDataSharing system in order to retrieve the car accidents data.
+    \end{itemize}
     \item {[R29]}: The system has to merge and find correlations between the violations and the car accidents;
-    \item {[R30]}: The system has to identify potentially unsafe areas and then estimate possible interventions based on the correlations that have been found;
+    \item[] {[R30]}: The system has to identify potentially unsafe areas and then estimate possible interventions based on the correlations that have been found;
+    \begin{itemize}
+      \item \textbf{SuggestionGenerationManager}: this component performs the sequence of operations required to produce the suggested intervention; such as requesting the data to the MunicipalityDataHandler, crossing the data and calculating the suggestions.
+    \end{itemize}
     \item {[R31]}: Once the computation is over the Web application must display the suggested interventions on the interface along with the location;
+    \begin{itemize}
+      \item \textbf{SuggestionNotifier}: once the suggestions are produced they are sent over to the this component that will forward them back to the web application through the SendNotificationWebManager.
+    \end{itemize}
 \end{itemize}
