Update effort spent table

--- a/DD/Sections/6-Effort_spent/Nicolo_albergoni.tex
+++ b/DD/Sections/6-Effort_spent/Nicolo_albergoni.tex
@@ -6,37 +6,31 @@
       \hline
       Day & Hours & Topic \\
       \hline
-      22/10/2019 & 2.5 & Purpose \\								
+      19/11/2019 & 1 & Purpose, Document structure \\								
       \hline
-      23/10/2019 & 3 & Scope, Current system \\
+      20/11/2019 & 2 & Deployment view \\
       \hline
-      24/10/2019 & 1.75	& Goals, Overview\\
+      21/11/2019 & 1 & Scope \\
       \hline								
-      26/10/2019 & 3	& Product perspective, Product function\\									
+      23/11/2019 & 1.5 &  Runtime view \\									
       \hline
-      27/10/2019 & 3 & Product function, Revision ch 1 and 2 \\									
+      24/11/2019 & 1 & Revision ch 1 and 2.1 - 2.2 - 2.3 \\									
       \hline
-      29/10/2019 & 2.5 & Scenarios \\									
+      26/11/2019 & 1.5 & Runtime view \\									
       \hline
-      30/10/2019 & 4 & Use cases \\									
+      27/11/2019 & 3.5 & Runtime view \\									
       \hline
-      31/10/2019 & 3 & Use cases, Revision ch 3 \\
+      28/11/2019 & 3.5 & Runtime view \\
       \hline
-      01/11/2019 & 1 & Finish use cases \\									
+      29/11/2019 & 1 & Runtime view \\									
       \hline
-      02/11/2019 & 2.75 & Requirements \\									
+      30/11/2019 & 3.5 & Runtime view \\									
       \hline
-      05/11/2019 & 2.25 & Finish requirements \\									
+      01/12/2019 & 2.5 & Runtime view, UI diagrams \\									
       \hline
-      06/11/2019 & 2.5 & Sequence diagrams \\									
+      02/12/2019 & 2.5 & Requirements traceability, Revision ch 2 and 3\\									
       \hline
-      07/11/2019 & 3.25 & Sequence diagrams \\						
-      \hline
-      08/11/2019 & 1.75 & Finish and reviewing of sequence diagrams \\
-      \hline
-      09/11/2019 & 2 & Use case diagrams, pagination fixes	\\
-      \hline
-      10/11/2019 & 2 & Traceability matrix, final revision	\\
+      03/12/2019 & 1.5 & Requirements traceability \\						
       \hline        							
   \end{tabularx}
 \end{table}
